# KrakenMachineFirmware

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.bak  FreeRTOS_Kernel_import.cmake  README.md
dev/: mailbox.py  main.py  ntp_module.py  shell_module.py  wifi_module.py
include/: FreeRTOSConfig.h  tusb_config.h
src/: CMakeLists.txt  main.c
src/KrakenMachineScheduler/: CMakeLists.txt  kraken_hal.c  kraken_hal.h  kraken_scheduler.c  kraken_scheduler.h
src/fs/: fatfs_driver.c  flash.c  flash.h
src/io/: bootsel_button.h
src/usb/: CMakeLists.txt  msc_disk.c  usb_descriptors.c  usb_msc.c  usb_msc.h  usb_msc_driver.c
